--- a/src/server/views/base.njk
+++ b/src/server/views/base.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ lang }}">
+<html lang="{{ lang if lang else '' }}">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
@@ -10,7 +10,7 @@
         minimum-scale=1.0"
   >
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{ title }}</title>
+  <title>{{ title if title else '' }}</title>
   {% block head %}{% endblock %}
 </head>
 <body>
