--- a/src/server/views/500.njk
+++ b/src/server/views/500.njk
@@ -4,7 +4,7 @@
   {{ super() }}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.json-viewer@1.4.0/json-viewer/jquery.json-viewer.min.css">
   <style>
-    a.json-toggle:before { line-height: 1.5; }
+    .json-toggle::before { line-height: 1.5; }
   </style>
 {% endblock %}
 
