--- a/src/server/views/base.njk
+++ b/src/server/views/base.njk
@@ -2,14 +2,18 @@
 <html lang="{{ lang if lang else '' }}">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width,
-        user-scalable=no,
-        initial-scale=1.0,
-        maximum-scale=1.0,
-        minimum-scale=1.0"
+  <meta
+    name="viewport"
+    content="width=device-width,
+      user-scalable=no,
+      initial-scale=1.0,
+      maximum-scale=1.0,
+      minimum-scale=1.0"
   >
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta
+    http-equiv="X-UA-Compatible"
+    content="ie=edge"
+  >
   <title>{{ title if title else '' }}</title>
   {% block head %}{% endblock %}
 </head>
