--- a/src/server/views/index.njk
+++ b/src/server/views/index.njk
@@ -1,5 +1,8 @@
 {% extends "base.njk" %}
 
+{% block head %}
+  <!--critical-css-->
+{% endblock %}
 {% block body %}
   <!--vue-ssr-outlet-->
 {% endblock %}
