--- a/src/server/views/serverErrorDetailed.njk
+++ b/src/server/views/serverErrorDetailed.njk
@@ -1,15 +1,17 @@
-{% extends "baseError.njk" %}
+{% extends "serverError.njk" %}
 
 {% block head %}
   {{ super() }}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery.json-viewer@1.4.0/json-viewer/jquery.json-viewer.min.css">
   <style>
-    .json-toggle::before { line-height: 1.5; }
+    a.json-toggle::before {
+      line-height: 1.5;
+    }
   </style>
 {% endblock %}
 
 {% block body %}
-  <h1 class="display-1 text-center">500</h1>
+  {{ super() }}
   <div class="container">
     <div class="card mb-4">
       <div class="card-header">
@@ -58,7 +60,9 @@
 
 {% block scripts %}
   {{ super() }}
-  <script src="https://cdn.jsdelivr.net/npm/jquery.json-viewer@1.4.0/json-viewer/jquery.json-viewer.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery.json-viewer@1/json-viewer/jquery.json-viewer.min.js"></script>
   <script>
     $('#reqJson').jsonViewer({{ req | safe }}, {
         collapsed: true,
