--- a/src/server/views/index.njk
+++ b/src/server/views/index.njk
@@ -15,7 +15,7 @@
     {% endfor %}
   {% else %}
     {% for style in manifest.css.initial %}
-      <link rel="stylesheet" as="style" href="{{ style }}">
+      <link rel="stylesheet" href="{{ style }}">
     {% endfor %}
   {% endif %}
   {% for style in manifest.css.async %}
