feat: deps update, server restart and store change reload

--- a/src/server/views/404.njk
+++ b/src/server/views/404.njk
@@ -7,7 +7,7 @@
         '404',
       ].join('/');
       const pathname = window.location.pathname;
-      window.location.href = `${page404}?uri=${encodeURIComponent(pathname)}`;
+      window.location.href = `${page404}?url=${encodeURIComponent(pathname)}`;
     </script>
     <style>
       body {
